kubernetes/apps/kube-system/cilium/policies/allow-clamav-egress.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-clamav-egress
spec:
  enableDefaultDeny:
    egress: false
    ingress: false
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: clamav
      io.kubernetes.pod.namespace: media-server
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
